--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   go-backend:
-    build: .
+    build: ./backend
     container_name: go-backend
     ports:
       - "8085:8085"
