--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,33 @@
 version: '3'
 services:
-  go-backend:
+  backend:
     build: ./backend
-    container_name: go-backend
+    container_name: backend
     ports:
       - "8085:8085"
     depends_on:
       - mongodb
     networks:
       - app-network
-
+  frontend:
+    build: ./frontend
+    container_name: frontend
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    depends_on:
+      - backend
+    networks:
+      - app-network
   mongodb:
-    image: mongo:5.0
+    image: mongo:latest
     container_name: mongodb
     ports:
       - "27017:27017"
     volumes:
-      - mongo-data:/data/db
+      - ./data:/data/db
     networks:
       - app-network
   mongo-express:
