--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,13 +26,15 @@ build:
 
 deploy:
   stage: deploy
-  image: bitnami/kubectl:latest
+  image:
+    name: bitnami/kubectl:latest
+    entrypoint: [""]
   script:
     - mkdir -p $HOME/.kube
     - echo "$KUBE_CONFIG" | base64 -d > $HOME/.kube/config
     - chmod 400 $HOME/.kube/config
     - sed -i "s|crypto-wallet-app-backend:latest|$DOCKER_USERNAME/crypto-wallet-app-backend:$CI_COMMIT_SHA|g" k8s/backend-deployment.yaml
     - sed -i "s|crypto-wallet-app-frontend:latest|$DOCKER_USERNAME/crypto-wallet-app-frontend:$CI_COMMIT_SHA|g" k8s/frontend-deployment.yaml
-    - /bin/sh -c "kubectl apply -f k8s/"
+    - kubectl apply -f k8s/
   only:
     - main
